added footer and working on background

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
 
   <!-- PARALLAX -->
-  <div id="index-banner" class="parallax-container valign-wrapper">
+<!-- <div id="index-banner" class="parallax-container valign-wrapper"> 
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
@@ -185,6 +185,33 @@
     <br><br><br>
   </div>
   <!-- end of Food trucks  -->
+
+  <!-- FOOTER -->
+  <footer class="fixed-bottom">
+    <div class="container">
+      <div class="row">
+        <div class="col l6 s12 center">
+          <br>
+          <h5 class="white-text">Problems with Website let us know</h5>
+          <ul>
+            <li>Email: <a href="mailto:Beef-boyz@beefy-boyz.com" target="_blank">Beef-boyz@beefy-boyz.com</a></li>
+
+          </ul>
+        </div>
+        <div class="col l6 s12 center">
+          <br>
+          <h5 class="white-text">Credit to the Developers</h5>
+          <ul>
+            <li><a href="https://github.com/justinpricer" target="_blank">Justin Pricer</a></li>
+            <li><a href="https://github.com/rolara57" target="_blank">Roger lara</a></li>
+            <li><a href="https://github.com/jasandper" target="_blank">Jason Perez</a></li>
+            <li><a href="https://github.com/chaseKay97" target="_blank">Chase Kilpatirck</a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </footer>
+  <!-- END FOOTER -->
   
   
   <!--  Scripts-->
