changed up the index a little bit

--- a/index.html
+++ b/index.html
@@ -37,10 +37,11 @@
 
 
   <!-- PARALLAX -->
-<!-- <div id="index-banner" class="parallax-container valign-wrapper"> 
+  <div id="index-banner" class="parallax-container valign-wrapper">
     <div class="section no-pad-bot">
       <div class="container">
         <div class="row center">
+            
      
         </div>
       </div>
