--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
         <div class="col s12 m4">
           <div class="card">
             <div class="card-image">
-                <img src="https://via.placeholder.com/150"alt="placecardholder" style="width:150px;height:150px;"
+                <img src="https://via.placeholder.com/150"alt="placecardholder" style="width:150px;height:150px;">
             </div>
             <div class="card-content">
               <p>Finest Mexican food trucks in ATX .</p>
